# VST-equalizer

./: .gitignore  00_START_HERE.md  BUILDING_GUIDE.md  CMakeLists.txt  COMPLETION_SUMMARY.md  DEVELOPER_GUIDE.md  DSP_DESIGN.md  IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REFERENCE.md
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BiQuadFilter.h  FilterBank.h
Source/UI/: SpectrumAnalyzer.h
